CuBoulder/tiamat-theme#1241 Corrects Person node display on mobile

--- a/css/ucb-person.css
+++ b/css/ucb-person.css
@@ -31,9 +31,11 @@ ul.ucb-person-phone-numbers {
   color: #111;
   margin: 0;
 }
+
 .ucb-person-email-icon {
   display: inline-block;
 }
+
 a.ucb-person-social-link i.fa-solid,
 a.ucb-person-social-link i.fa-brands {
   color: #111;
@@ -45,29 +47,19 @@ a.ucb-person-social-link i.fa-brands {
 
 .ucb-person-contact p {
   margin: 5px;
-  padding-top:10px;
-  padding-bottom:10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
-.ucb-articles-by-person-block{
+.ucb-articles-by-person-block {
   display: block;
   margin-bottom: 20px;
 }
 
-.ucb-article-card-title{
+.ucb-article-card-title {
   margin: 0;
   margin-bottom: 10px;
   margin-top: 10px;
-}
-
-@media only screen and (max-width: 767px) {
-  .ucb-person-main {
-    display: flex;
-    flex-direction: row;
-  }
-  .ucb-person-main .ucb-person-img {
-    padding-right: 10px;
-  }
 }
 
 .ucb-person-img .media-image-caption {
@@ -85,8 +77,8 @@ a.ucb-person-social-link i.fa-brands {
   margin-top: 20px;
 }
 
-ul.ucb-person-title li:not(:first-child):before,
-ul.ucb-person-department li:not(:first-child):before {
+ul.ucb-person-title li:not(:first-child)::before,
+ul.ucb-person-department li:not(:first-child)::before {
   font-weight: 900;
   content: '\2022';
   vertical-align: middle;
@@ -122,15 +114,15 @@ ul.ucb-person-department li:not(:first-child):before {
   color: #111;
 }
 
-.ucb-article-card-title-only{
+.ucb-article-card-title-only {
   border-bottom: 1px solid rgba(128, 128, 128, 0.333);
 }
 
-.ucb-article-read-more-container{
+.ucb-article-read-more-container {
   text-align: right;
   padding: 10px 0px;
 }
 
-.ucb-article-read-more{
+.ucb-article-read-more {
   font-size: 85%;
 }
